--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Authors, English -- 19th century -- Biography'
 - !lcc 'PR'
 - !lcsh 'Jefferies, Richard, 1848-1887'
+- GITenberg
 title: The Eulogy of Richard Jefferies
 url: http://www.gutenberg.org/ebooks/36228
